<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="tool"
            type="com.matao.arm.arm_of_master_sstp.models.Tool"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tools_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:text="@string/naming"
            />

        <TextView
            android:id="@+id/tools_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tools_name_text"
            android:textColor="@color/dark_gray"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:text="@{tool.name}"
            tools:text="хз"
            />

        <TextView
            android:id="@+id/tools_stock_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tools_name"
            android:layout_marginLeft="20dp"
            android:text="@string/stock_nomber"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tools_stock_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tools_name"
            android:layout_toRightOf="@+id/tools_stock_number_text"
            android:layout_marginLeft="5dp"
            android:textColor="@color/dark_gray"
            android:textSize="14dp"
            android:text="@{tool.number}"
            tools:text="хз"
            />

        <TextView
            android:id="@+id/tools_next_verification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tools_stock_number"
            android:layout_marginTop="2dp"
            android:text="@string/next_verification"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/tools_next_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tools_stock_number"
            android:layout_toRightOf="@+id/tools_next_verification_text"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/dark_gray"
            android:textSize="14dp"
            android:text="@{tool.nextVerification}"
            tools:text="хз" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/tools_next_verification"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/hardware_plan_lps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="26dp"
            android:background="@drawable/round_green"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@{tool.lps.name}"
            tools:text="1" />

    </RelativeLayout>
</layout>
